<resources  xmlns:tools="http://schemas.android.com/tools">
    <string formatted="false" name="stage">Stage</string>
    <string formatted="false" name="play">Play</string>
    <string formatted="false" name="settings">Settings</string>
    <string formatted="false" name="redo">Redo</string>
    <string formatted="false" name="undo">Undo</string>
    <string formatted="false" name="new_option">new…</string>
    <string formatted="false" name="edit_option">edit…</string>
    <string formatted="false" name="confirm">Confirm</string>
    <string formatted="false" name="ignore">Ignore</string>
    <string formatted="false" name="cancel">Cancel</string>
    <string formatted="false" name="save">Save</string>
    <string formatted="false" name="help">Help</string>
    <string formatted="false" name="discard">Discard</string>
    <string formatted="false" name="next">Next</string>
    <string formatted="false" name="ok">OK</string>
    <string formatted="false" name="done">Done</string>
    <string formatted="false" name="close">Close</string>
    <string formatted="false" name="yes">Yes</string>
    <string formatted="false" name="no">No</string>
    <string formatted="false" name="once">Once</string>
    <string formatted="false" name="always">Always</string>
    <string formatted="false" name="deny">Deny</string>
    <string formatted="false" name="do_not_show_again">DO NOT SHOW AGAIN</string>
    <string formatted="false" name="accept">Accept</string>
    <string formatted="false" name="decline">Decline</string>
    <string formatted="false" name="select_all">Select all</string>
    <string formatted="false" name="deselect_all">Deselect all</string>
    <string formatted="false" name="skip">skip</string>
    <string formatted="false" name="warning">Warning</string>
    <string formatted="false" name="error">Error</string>
    <string formatted="false" name="loading">Loading…</string>
    <string formatted="false" name="please_wait">Please wait</string>
    <string formatted="false" name="search_hint">Search</string>
    <string formatted="false" name="backpack_add">Add to backpack</string>
    <string formatted="false" name="share_website_text">share.catrob.at</string>
    <string formatted="false" name="security_warning_dialog_msg">The project you have downloaded listens to your voice
        in the background and also sends data to the internet. This may be harmless, and necessary
        for its intended behavior. However, please make sure that what you are saying while the
        project is running is safe. In case of doubt, please delete the downloaded project.
        You may also report the project on its page on the Catrobat community platform in case
        you are sure that it is harmful.</string>
    <string formatted="false" name="api_replacement_dialog_neutral">Upload without change</string>
    <string formatted="false" name="api_replacement_dialog_accept">Upload with keys replaced</string>
    <string formatted="false" name="api_replacement_dialog_warning">The project contains bricks that access the
        web, and also seems to contain API keys. Please see %1s why
        uploading these keys can be dangerous.</string>
    <string formatted="false" name="api_replacement">insert API key here</string>
    <string formatted="false" name="loading_check_oauth_token">Checking login data…</string>
    <string formatted="false" name="main_menu_help">Help</string>
    <string formatted="false" name="main_menu_rate_app">Rate us!</string>
    <string formatted="false" name="main_menu_terms_of_use">Terms of Use and Service</string>
    <string formatted="false" name="main_menu_privacy_policy">Privacy Policy</string>
    <string formatted="false" name="main_menu_about">About this app</string>
    <string formatted="false" name="main_menu_login">Login</string>
    <string formatted="false" name="main_menu_logout">Logout</string>
    <string formatted="false" name="main_menu_scratch_converter">Scratch converter</string>
    <string formatted="false" name="preference_title_language">Language</string>
    <string formatted="false" name="preference_description_language">Set the app\'s language</string>
    <string formatted="false" name="preference_title_web_access">Web access</string>
    <string formatted="false" name="preference_description_web_access">Edit to add or remove trusted domains</string>
    <string formatted="false" name="preference_title_ai">Artificial intelligence (AI) extension</string>
    <string formatted="false" name="preference_description_ai">Enable AI bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_speech_recognition">Speech
        recognition</string>
    <string formatted="false" name="preference_description_ai_speech_recognition">Enable
        speech recognition bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_speech_synthetization">Speech
        synthetization</string>
    <string formatted="false" name="preference_description_ai_speech_synthetization">Enable
        speech synthetization bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_face_detection">Face
        detection</string>
    <string formatted="false" name="preference_description_ai_face_detection">Enable
        face detection bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_pose_detection">Pose detection</string>
    <string formatted="false" name="preference_description_ai_pose_detection">Enable
        pose detection bricks and sensors</string>
    <string formatted="false" name="preference_title_ai_text_recognition">Text
        recognition</string>
    <string formatted="false" name="preference_description_ai_text_recognition">Enable
        text recognition bricks and sensors</string>
    <string formatted="false" name="preference_title_accessibility">Accessibility</string>
    <string formatted="false" name="preference_description_accessibility">Change the app\'s appearance</string>
    <string formatted="false" name="preference_title_accessibility_profiles">Accessibility profiles</string>
    <string formatted="false" name="preference_title_accessibility_profile">Predefined profiles</string>
    <string formatted="false" name="preference_description_accessibility_profiles">Pick a predefined accessibility profile</string>
    <string formatted="false" name="preference_title_accessibility_text_appearance">Text appearance</string>
    <string formatted="false" name="preference_title_accessibility_handling">Handling</string>
    <string formatted="false" name="preference_title_accessibility_category_icons_big">Large icons</string>
    <string formatted="false" name="preference_description_accessibility_category_icons_big">Increase icon size.</string>
    <string formatted="false" name="preference_title_accessibility_category_icons_high_contrast">High contrast icons</string>
    <string formatted="false" name="preference_title_accessibility_Brick_icons">Icons</string>
    <string formatted="false" name="preference_title_accessibility_category_icons">Show icons</string>
    <string formatted="false" name="preference_description_accessibility_category_icons">Add icons to categories and bricks.</string>
    <string formatted="false" name="preference_title_accessibility_high_contrast">High contrast</string>
    <string formatted="false" name="preference_description_accessibility_high_contrast">Increase the text contrast.</string>
    <string formatted="false" name="preference_description_accessibility_large_text">Increase the text size.</string>
    <string formatted="false" name="preference_title_accessibility_large_text">Large text</string>
    <string formatted="false" name="preference_title_accessibility_element_spacing">Large element spacing</string>
    <string formatted="false" name="preference_description_accessibility_element_spacing">Increase element spacing in lists.</string>
    <string formatted="false" name="preference_title_accessibility_dragndrop_delay">Drag\'n\'drop delay</string>
    <string formatted="false" name="preference_description_accessibility_dragndrop_delay">Drag\'n\'drop delay for bricks.</string>
    <string formatted="false" name="preference_title_accessibility_beginner_bricks">Beginner mode</string>
    <string formatted="false" name="preference_description_accessibility_beginner_bricks">Show only simple features.</string>
    <string formatted="false" name="preference_title_accessibility_font_style">Choose a text type</string>
    <string formatted="false" name="preference_title_enable_mindstorms_ev3_bricks">Lego Mindstorms EV3 extension</string>
    <string formatted="false" name="preference_description_mindstorms_ev3_bricks">Allow the app to control Lego Mindstorms EV3 robots</string>
    <string formatted="false" name="preference_title_mindstorms_ev3_sensors">Lego EV3 Sensors</string>
    <string formatted="false" name="preference_title_enable_crash_reports">Sending anonymous crash reports</string>
    <string formatted="false" name="preference_description_crash_reports">Allow the app to send crash reports automatically</string>
    <string formatted="false" name="preference_title_enable_mqtt_bricks">MQTT extension</string>
    <string formatted="false" name="preference_description_mqtt_bricks">Allow the app to connect to MQTT brokers</string>
    <string formatted="false" name="preference_title_mqtt_enabled">Enable MQTT bricks</string>
    <string formatted="false" name="preference_description_mqtt_enabled">Enable bricks and sensors for MQTT</string>
    <string formatted="false" name="preference_title_mqtt_category">MQTT settings</string>
    <string formatted="false" name="preference_title_mqtt_broker_host">Broker host</string>
    <string formatted="false" name="preference_description_mqtt_broker_host">IP address or hostname of the MQTT broker</string>
    <string formatted="false" name="preference_title_mqtt_broker_port">Broker port</string>
    <string formatted="false" name="preference_description_mqtt_broker_port">Port number of the MQTT broker (1–65535)</string>
    <string formatted="false" name="preference_title_mqtt_use_tls">Use TLS</string>
    <string formatted="false" name="preference_title_mqtt_username">Username</string>
    <string formatted="false" name="preference_title_mqtt_password">Password</string>
    <string formatted="false" name="preference_title_mqtt_client_id">Client ID</string>
    <string formatted="false" name="preference_disable_nxt_info_dialog">Disable info dialog</string>
    <string formatted="false" name="preference_disable_ev3_info_dialog_description">Project specific EV3 settings are not shown when
        opening a project.</string>
    <string formatted="false" name="preference_title_mindstorms_ev3_sensors_description">The mapping of EV3 sensors to ports is project
        specific and can only be configured for opened projects.</string>
    <string formatted="false" name="ev3_choose_sensor_1">Sensor connected on port 1</string>
    <string formatted="false" name="ev3_choose_sensor_2">Sensor connected on port 2</string>
    <string formatted="false" name="ev3_choose_sensor_3">Sensor connected on port 3</string>
    <string formatted="false" name="ev3_choose_sensor_4">Sensor connected on port 4</string>
    <string formatted="false" name="ev3_no_sensor">none</string>
    <string formatted="false" name="ev3_sensor_touch">EV3 touch sensor</string>
    <string formatted="false" name="ev3_sensor_infrared">EV3 infrared sensor</string>
    <string formatted="false" name="ev3_sensor_color">EV3 color sensor</string>
    <string formatted="false" name="cast_button_menu_item_title">Cast button</string>
    <string formatted="false" name="preference_description_hints">Enable to show hints</string>
    <string formatted="false" name="preference_title_enable_hints">Show hints </string>
</resources>