<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2025 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->
<PreferenceScreen
    android:key="settings_mqtt_screen"
    android:summary="@string/preference_description_mqtt_bricks"
    android:title="@string/preference_title_enable_mqtt_bricks"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="setting_mqtt_bricks"
        android:summary="@string/preference_description_mqtt_enabled"
        android:title="@string/preference_title_mqtt_enabled" />

    <PreferenceCategory
        android:key="setting_mqtt_category"
        android:title="@string/preference_title_mqtt_category">

        <EditTextPreference
            android:defaultValue="192.168.0.1"
            android:key="setting_mqtt_host"
            android:summary="@string/preference_description_mqtt_broker_host"
            android:title="@string/preference_title_mqtt_broker_host" />

        <EditTextPreference
            android:defaultValue="1883"
            android:inputType="number"
            android:key="setting_mqtt_port"
            android:summary="@string/preference_description_mqtt_broker_port"
            android:title="@string/preference_title_mqtt_broker_port" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="setting_mqtt_tls"
            android:title="@string/preference_title_mqtt_use_tls" />

        <EditTextPreference
            android:defaultValue=""
            android:key="setting_mqtt_username"
            android:title="@string/preference_title_mqtt_username" />

        <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="setting_mqtt_password"
            android:title="@string/preference_title_mqtt_password" />

        <EditTextPreference
            android:defaultValue=""
            android:key="setting_mqtt_client_id"
            android:title="@string/preference_title_mqtt_client_id" />

    </PreferenceCategory>

</PreferenceScreen>
