<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2023 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        app:iconSpaceReserved="false"
        android:defaultValue="false"
        android:key="setting_multilingual"
        android:title="@string/preference_title_language"
        android:summary="@string/preference_description_language" />

    <PreferenceScreen
        app:iconSpaceReserved="false"
        android:key="setting_accessibility_screen"
        android:title="@string/preference_title_accessibility"
        android:summary="@string/preference_description_accessibility" />

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="@string/SNACKBAR_HINTS_ENABLED"
        android:key="setting_enable_hints"
        android:title="@string/preference_title_enable_hints"
        android:summary="@string/preference_description_hints" />

    <PreferenceScreen
        android:key="setting_trusted_domains"
        android:summary="@string/preference_description_web_access"
        android:title="@string/preference_title_web_access"
        app:iconSpaceReserved="false"/>

    <PreferenceScreen
        android:key="setting_manage_extensions"
        android:summary="@string/preference_description_extension"
        android:title="@string/preference_title_manage_extensions"
        app:iconSpaceReserved="false"/>

    <SwitchPreference
        app:iconSpaceReserved="false"
        android:defaultValue="true"
        android:key="setting_enable_crash_reports"
        android:title="@string/preference_title_enable_crash_reports"
        android:summary="@string/preference_description_crash_reports" />

</PreferenceScreen>
