<?xml version="1.0" encoding="utf-8"?><!--
  ~ Catroid: An on-device visual programming system for Android devices
  ~ Copyright (C) 2010-2022 The Catrobat Team
  ~ (<http://developer.catrobat.org/credits>)
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU Affero General Public License as
  ~ published by the Free Software Foundation, either version 3 of the
  ~ License, or (at your option) any later version.
  ~
  ~ An additional term exception under section 7 of the GNU Affero
  ~ General Public License, version 3, is available at
  ~ http://developer.catrobat.org/license_additional_term
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
  ~ GNU Affero General Public License for more details.
  ~
  ~ You should have received a copy of the GNU Affero General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:layout_gravity="end">

    <item
        android:id="@+id/cast_button"
        android:icon="@drawable/ic_cast_white"
        android:title="@string/cast_button_menu_item_title"
        android:visible="false"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_rate_app"
        android:icon="@drawable/ic_star_rate"
        android:title="@string/main_menu_rate_app"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_terms_of_use"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/main_menu_terms_of_use"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_privacy_policy"
        android:icon="@drawable/ic_policy"
        android:title="@string/main_menu_privacy_policy"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:title="@string/main_menu_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_scratch_converter"
        android:icon="@drawable/ic_placeholder"
        android:title="@string/main_menu_scratch_converter"
        app:showAsAction="never" />
    <item
        android:id="@+id/settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_login"
        android:icon="@drawable/ic_login"
        android:title="@string/main_menu_login"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/main_menu_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:icon="@drawable/ic_main_menu_help"
        android:title="@string/main_menu_help"
        app:showAsAction="always" />

        <item
             android:id="@+id/menu_search"
             android:icon="@drawable/ic_main_menu_search"
             android:title="@string/main_menu_search"
             app:showAsAction="always" />

        </group>
</menu>
